# icecream

./: .cirrus.yml  .clang-format  .gitignore  .travis.yml  0001-Use-pkg-config-to-find-packages.patch  BENCH  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.cvs  Makefile.in  NEWS  README  README.BRANCH  README.md  ReleaseProcess.md  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  configure.in.in  icecc_1.0.1.orig.tar.bz2
.github/workflows/: codeql.yml  main.yml
client/: CMakeLists.txt  Makefile.am  Makefile.in  arg.cpp  argv.c  argv.h  client.h  cpp.cpp  create-env  icecc-create-env  icecc-create-env.in  icecc-test-env.in  local.cpp  main.cpp  md5.c  md5.h  remote.cpp  safeguard.cpp  util.cpp  util.h
client/src/: Makefile.am  arg.cpp  arg.h  argv.c  argv.h  call_cpp.cpp  call_cpp.h  client.h  client_util.cpp  client_util.h  cpp.cpp  errors.h  local.cpp  local.h  main.cpp  md5.c  md5.h  remote.cpp  remote.h  safeguard.cpp  safeguard.h  util.cpp
compilerwrapper/: CMakeLists.txt  Makefile.am  Makefile.in  compilerwrapper.cpp
compilerwrapper/src/: compilerwrapper.cpp
create-env/: CMakeLists.txt  icecc-create-env.in
daemon/: CMakeLists.txt  Makefile.am  Makefile.in  environment.cpp  environment.h  file_util.cpp  file_util.h  load.cpp  load.h  main.cpp  ncpus.c  ncpus.h  serve.cpp  serve.h  workit.cpp  workit.h
daemon/src/: client.cpp  client.hpp  clients.hpp  daemon.cpp  daemon.hpp  daemon_exception.h  environment.cpp  environment.h  file_util.cpp  file_util.h  load.cpp  load.h  main.cpp  serve.cpp  workit.cpp  workit.h
debian/: changelog  control  copyright  debianrules  icecc-monitor.install  icecc.NEWS  icecc.README.Debian  icecc.conf  icecc.config  icecc.dirs  icecc.icecc-scheduler.init  icecc.iceccd.init  icecc.install  icecc.links  icecc.lintian-overrides  icecc.logrotate  icecc.maintscript  icecc.manpages  icecc.postinst  icecc.postrm  icecc.prerm  icecc.templates  icecc.triggers  libicecc-dev.install  rules  watch
debian/man/: icecc-create-env.1.docbook  icecc-create-env.xml  icecc-scheduler.1.docbook  icecc.1.docbook  iceccd.1.docbook
debian/patches/: configure-package-name.diff  library-name.diff  pkgconfig-name.diff
doc/: Makefile.am  Makefile.in  README.adoc  icecc-create-env.adoc  icecc-scheduler.1  icecc-scheduler.adoc  icecc.1  icecc.adoc  iceccd.1  iceccd.adoc  icecream.7  icecream.adoc  icerun.adoc  man-icecc-create-env.1.xml  man-icecc-scheduler.1.docbook  man-icecc-scheduler.1.xml  man-icecc.1.docbook  man-icecc.1.xml  man-iceccd.1.docbook  man-iceccd.1.xml  man-icecream.7.docbook  man-icecream.7.xml  man-icerun.1.xml  man-scheduler.1.docbook  regenerate.sh
icecream/: Makefile.am  Makefile.am.in  Makefile.cvs  README  TODO  configure.ac  configure.in.cvs  configure.in.in  configure.in.mid
icecream/client/: Makefile.am  arg.cpp  client.h  cpp.cpp  create-env  local.cpp  main.cpp  remote.cpp  safeguard.cpp  util.cpp  util.h
icecream/daemon/: Makefile.am  environment.cpp  environment.h  findmyself.cpp  findmyself.h  load.cpp  load.h  main.cpp  ncpus.c  ncpus.h  serve.cpp  serve.h  tempfile.c  tempfile.h  workit.cpp  workit.h
icecream/debian/: changelog  control  copyright  icecc-monitor.install  icecc.init  icecc.install  icecc.postinst  icecc.postrm  rules
icecream/doc/: Makefile.am  man-create-env.1.docbook  man-icecc.1.docbook  man-iceccd.1.docbook  man-icecream.7.docbook
icecream/minilzo/: Makefile.am  minilzo.c
icecream/services/: Makefile.am  comm.cpp  comm.h  configure.in.in  exitcode.h  getifaddrs.cpp  job.cpp  job.h  logging.cpp  logging.h  receiver.cpp  scheduler.cpp  submitter.cpp  tempfile.c  tempfile.h
icecream/suse/: icecream.spec  init.icecream  sysconfig.icecream
m4/: cap-ng.m4
minilzo/: Makefile.am  Makefile.in  lzodefs.h  minilzo.c
mon/: Makefile.am  monitor.cc
scheduler/: CMakeLists.txt  Makefile.am  bench.h  compileserver.cpp  compileserver.h  job.cpp  job.h  jobstat.cpp  jobstat.h  scheduler.cpp  scheduler.h
scheduler/src/: compileserver.cpp  compileserver.h  job.cpp  job.h  jobstat.cpp  jobstat.h  main.cpp  scheduler.cpp  scheduler.h  scheduler_job.cpp  scheduler_job.h
services/: CMakeLists.txt  Makefile.am  Makefile.in  bench.h  comm.cpp  comm.h  configure.in.in  exitcode.cpp  exitcode.h  file_util.cpp  file_util.h  gcc.cpp  getifaddrs.cpp  getifaddrs.h  icecc.pc.in  icecream.pc.in  job.cpp  job.h  logging.cpp  logging.h  ncpus.c  ncpus.h  pipes.cpp  pipes.h  platform.cpp  platform.h  scheduler.cpp  tempfile.c  tempfile.h  util.cpp  util.h
services/include/: comm.h  exitcode.h  getifaddrs.h  ggc.h  logging.h  ncpus.h  pipes.h  platform.h  services_job.h  services_util.h
services/include/services/: getifaddrs.h  logging.h  util.h  version.h
services/src/: comm.cpp  exitcode.c  exitcode.cpp  gcc.cpp  getifaddrs.cpp  ggc.cpp  icecc.pc.in  job.cpp  logging.cpp  ncpus.c  pipes.c  pipes.cpp  platform.cpp  services_job.cpp  services_util.cpp  tempfile.c  util.cpp
suse/: Makefile.am  Makefile.in  SuSEfirewall.iceccd  SuSEfirewall.scheduler  icecc-scheduler.xml  iceccd.xml  icecream.spec  icecream.spec.in  init.icecream  logrotate  sysconfig.icecream  update_rpm
test-env/: CMakeLists.txt
tests/: Makefile.am  Makefile.flto  Makefile.test  README  args.cpp  assembler.args  clangplugin.cpp  clangplugintest.cpp  clangrewriteincludes.cpp  clangrewriteincludes.h  countermacro.c  debug-gdb.txt  debug.cpp  flto-g++  fsanitize-blacklist.txt  fsanitize.cpp  icerun-test.sh  includes-without.cpp  includes.cpp  includes.h  macros.s  make.h  make1.cpp  make10.cpp  make2.cpp  make3.cpp  make4.cpp  make5.cpp  make6.cpp  make7.cpp  make8.cpp  make9.cpp  messages.cpp  messages.h  plain  plain.cpp  rawliterals.cpp  recursive_clang++  recursive_g++  syntaxerror.cpp  (+12 more)
tests/debug/: debug2.cpp
unittests/: Makefile.am  README  TODO  args.cpp
